--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style></style>
+    <link rel="stylesheet" href="media/style.css">
+    <script src="media/script.js"></script>
+    <link rel="icon" type="image/x-icon" href="media/image/omori_sprite_icon.png">
     <title>OMORI</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <div class="direita">
+                <a href="#pinto">pinto</a>
+                <a href="#pinto">pinto</a>
+            </div>
+            <span style="font-size: 1.8rem">☰</span>
+        </header>
+        <span>pinto bolas penis shishi</span>
+        
+    </main>
+
+
 </body>
 </html>
