whitespace: added very basic elements

--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="media/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="media/style.css" />
     <script src="media/script.js"></script>
-    <link rel="icon" type="image/x-icon" href="media/image/omori_sprite_icon.png">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="media/image/omori_sprite_icon.png"
+    />
     <title>OMORI</title>
-</head>
-<body>
-    <main>
-        <header>
-            <div class="direita">
-                <a href="#pinto">pinto</a>
-                <a href="#pinto">pinto</a>
-            </div>
-            <span style="font-size: 1.8rem">☰</span>
-        </header>
-        <span>pinto bolas penis shishi</span>
-        
+  </head>
+  <body>
+    <header id="header">
+      <div class="direita">placeholder1 placeholder2 placeholder3</div>
+      <fieldset>
+        <span style="font-size: 1.8rem">☰</span>
+      </fieldset>
+    </header>
+    <main id="whitespace">
+      <div class="carpet">
+        <div class="mewo">
+          <img src="media/image/mewo.gif" height="75px" />
+        </div>
+      </div>
+      <div class="light-bulb">
+        <img src="media/image/WS_Lightbulb_Sprite_1.gif" height="100px">
+      </div>
     </main>
-
-
-</body>
+  </body>
 </html>
