whitespace: dark theme toggle and bulb added

--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
       </fieldset>
     </header>
     <main id="whitespace">
+      <span id="debug">TEXTO</span>
+      <div class="light-bulb">
+        <img id="bulb" src="media/image/bulb_black_theme.gif" draggable="false" height="150px" alt="bulb">
+      </div>
       <div class="carpet">
         <div class="mewo">
-          <img src="media/image/mewo.gif" height="75px" />
+          <img id="mewo" src="media/image/mewo.gif" draggable="false" height="75px" />
         </div>
       </div>
-      <div class="light-bulb">
-        <img src="media/image/WS_Lightbulb_Sprite_1.gif" height="100px">
-      </div>
-    </main>
+      </main>
   </body>
 </html>
