--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
       </fieldset>
     </header>
     <main id="whitespace">
-      <span id="debug">TEXTO</span>
       <div class="light-bulb">
-        <img id="bulb" src="media/image/bulb_black_theme.gif" draggable="false" height="150px" alt="bulb">
+        <span id="bulb-text">Theme</span>
+        <img id="bulb" src="media/image/bulb_black_theme.gif" draggable="false">
+        
+      </div>
+      <div class="door">
+        <img id="door" src="media/image/door.png" draggable="false" />
       </div>
       <div class="carpet">
         <div class="mewo">
-          <img id="mewo" src="media/image/mewo.gif" draggable="false" height="75px" />
+          <img id="mewo" src="media/image/mewo.gif" draggable="false"/>
+
         </div>
       </div>
       </main>
