whitespace: fixed stupid code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section class="carpet">
       <div class="mewo">
-        <img src="media/image/mewo.gif" alt="Mewo" style="cursor: pointer;" draggable="false" onclick="playMewo()" />
+        <img src="media/image/mewo.gif" id="mewo" alt="Mewo" style="cursor: pointer;" draggable="false" onclick="playMewo()" />
         <audio id="mewoMeow">
           <source src="media/audio/mewo.mp3" type="audio/mpeg">
           Seu navegador não suporta áudio.
