--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>OMORI</title>
   <link rel="icon" href="media/image/omori_sprite_icon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="media/style.css" />
+  <link rel="stylesheet" href="media/style.css"/>
   <script defer src="media/script.js"></script>
 </head>
 <body>
@@ -19,7 +19,7 @@
     </section>
 
     <section class="door">
-      <img id="door" src="media/image/door.png" alt="Porta" draggable="false" />
+      <a href="/mainPage.html"><img id="door" src="media/image/door.png" alt="Porta" draggable="false" /></a> <!-- TODO: Adicionar um dialogozinho igual no OMORI pergutando se quer sair do whitespace mesmo -->
     </section>
 
     <section class="carpet">
@@ -29,8 +29,12 @@
           <source src="media/audio/mewo.mp3" type="audio/mpeg">
           Seu navegador não suporta áudio.
         </audio>
+
       </div>
+
     </section>
+  
   </main>
+
 </body>
 </html>
