whitespace && mainPage: improve everything and added cool blur effect

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
 
       </div>
 
+      <figure class="laptop">
+        <img src="media/image/sprites/omori_whitespace_computer.gif" alt="Laptop">
+      </figure>    
+      
+      <figure class="scketchbook">
+        <img src="media/image/sprites/whitespace_scketchbook.png" alt="Scketchbook">
+      </figure>
+
+      <figure class="tissue-box">
+        <img src="media/image/sprites/whitespace_tissue_box.png" alt="Tissue Box">
+      </figure>
     </section>
   
   </main>
