--- a/mainPage.html
+++ b/mainPage.html
@@ -9,8 +9,12 @@
     <title>OMORI</title>
 </head>
 <body>
-    <header>
-        <h1>OMORI</h1>
+    <div id="back-body"></div>
+ 
+    </div>
+    <header id="header">
+        <div id="back"></div>
+        <div id="content"><h1>OMORI</h1></div>
     </header>
     <nav>
         <ol>
