whitespace: correctly positioned items and added their responsity

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
         </audio>
 
       </div>
+      <div class="top-incarpet">
+        <figure class="laptop">
+          <img src="media/image/sprites/omori_whitespace_computer.gif" alt="Laptop">
+        </figure>    
+            
+        <figure class="scketchbook">
+          <img src="media/image/sprites/whitespace_scketchbook.png" alt="Scketchbook">
+       </figure>
 
-      <figure class="laptop">
-        <img src="media/image/sprites/omori_whitespace_computer.gif" alt="Laptop">
-      </figure>    
-      
-      <figure class="scketchbook">
-        <img src="media/image/sprites/whitespace_scketchbook.png" alt="Scketchbook">
-      </figure>
-
-      <figure class="tissue-box">
-        <img src="media/image/sprites/whitespace_tissue_box.png" alt="Tissue Box">
-      </figure>
+       <figure class="tissue-box">
+          <img src="media/image/sprites/whitespace_tissue_box.png" alt="Tissue Box">
+        </figure>
+      </div>
     </section>
-  
   </main>
 
 </body>
