whitespace && mainPage: some adjust for moblie version

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 <body>
 
   <main class="whitespace" id="whitespace">
-    <section class="light-bulb">
+    <figure class="light-bulb">
       <button id="theme-toggle" aria-label="Alternar tema">
         <img id="bulb" src="/media/image/elements/single/bulb_black_theme.gif" alt="Interruptor de tema" draggable="false" />
       </button>
       <span id="bulb-text">Theme</span>
-    </section>
+    </figure>
 
-    <section class="door">
+    <figure class="door">
       <a href="/pages/homePage/homePage.html"><img id="door" src="/media/image/elements/single/door.png" alt="Porta" draggable="false" /></a> <!-- TODO: Adicionar um dialogozinho igual no OMORI pergutando se quer sair do whitespace mesmo -->
-    </section>
+    </figure>
 
     <section class="carpet">
       <div class="mewo">
         <img src="/media/image/elements/single/mewo.gif" id="mewo" alt="Mewo" style="cursor: pointer;" draggable="false" onclick="playMewo()" />
         <audio id="mewoMeow">
           <source src="/media/image/elements/single/mewo.mp3" type="audio/mpeg">
-          Seu navegador não suporta áudio.
+          Mewo não miou (Erro na reprodução do áudio)
         </audio>
 
       </div>
