--- a/pages/homePage/homePage.html
+++ b/pages/homePage/homePage.html
@@ -15,9 +15,9 @@
             <h1>OMORI</h1>
         </div>
     </header>
-
+    <a id="goBack" href="/index.html">Back to Whitespace</a></li>
     <nav>
-        <ul> <li><a href="/index.html">Back to Whitespace</a></li>
+        <ul>
             <li><a href="/pages/contentPage1/placeholer.html">Placeholder 1</a></li>
             <li><a href="/mainPage.html">Placeholder 2</a></li>
             <li><a href="/mainPage.html">Placeholder 3</a></li>
