whitespace: finished responsivity

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
   <script defer src="pages/scripts/script.js"></script>
 </head>
 <body>
+  <!--
+  <dialog open id="omori-sketchbook">
+    <div class="modal-content">
+      <div class="slider-container">
+        <button class="slider-btn" id="prev-btn" aria-label="Imagem anterior">&#8592;</button>
+        <img id="slider-image" src="/media/image/elements/single/whitespace_scketchbook.png" alt="Imagem do Sketchbook" />
+        <button class="slider-btn" id="next-btn" aria-label="Próxima imagem">&#8594;</button>
+      </div>
+    </div>
+  </dialog>
+  !-->
+
 
   <main class="whitespace" id="whitespace">
     <figure class="light-bulb">
