--- a/pages/homePage/homePage.html
+++ b/pages/homePage/homePage.html
@@ -18,14 +18,19 @@
     <a id="goBack" href="/index.html">Back to Whitespace</a></li>
     <nav>
         <ul>
-            <li><a href="/pages/contentPage1/placeholer.html">Placeholder 1</a></li>
+            <li><a href="/pages/contentPage1/placeholer.html">Antes de começar, o que é <span class="omori-font-text">OMORI</span>?</a></li>
             <li><a href="/mainPage.html">Placeholder 2</a></li>
             <li><a href="/mainPage.html">Placeholder 3</a></li>
         </ul>
     </nav>
 
     <main>
-        <h1>BASIC GLASMORPHISM + OMORI</h1>
+        <h1>O que é <span style="font-size: 4rem;" class="omori-font-text">OMORI</span></h1>
+        <div class="content">
+            <p>
+                Omori é um jogo RPG de terror psicológico desenvolvido por Omocat. Lançado inicialmente como um projeto de crowdfunding, o jogo combina elementos de exploração, combate por turnos e narrativa envolvente. Os jogadores assumem o papel de Omori, um personagem que vive em um mundo onírico e surreal, enquanto exploram temas de amizade, perda e auto-descoberta.
+            </p>
+        </div>
     </main>
 
 </body>
