--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="mewo">
         <img src="/media/image/elements/single/mewo.gif" id="mewo" alt="Mewo" style="cursor: pointer;" draggable="false" onclick="playMewo()" />
         <audio id="mewoMeow">
-          <source src="/media/image/elements/single/mewo.mp3" type="audio/mpeg">
+          <source src="/media/audio/SFX/mewo.mp3" type="audio/mpeg">
           Mewo não miou (Erro na reprodução do áudio)
         </audio>
 
