whitespace: improved dialogs and added semi-final layout

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </figure>
 
     <figure class="door">
-      <a href="/pages/homePage/homePage.html"><img id="door" src="/media/image/elements/single/door.png" alt="Porta" draggable="false" /></a> <!-- TODO: Adicionar um dialogozinho igual no OMORI pergutando se quer sair do whitespace mesmo -->
+      <a href="/pages/html/homePage.html"><img id="door" src="/media/image/elements/single/door.png" alt="Porta" draggable="false" /></a> <!-- TODO: Adicionar um dialogozinho igual no OMORI pergutando se quer sair do whitespace mesmo -->
     </figure>
 
     <section class="carpet">
