OMORI: reestructure of pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <script defer src="pages/scripts/script.js"></script>
 </head>
 <body>
-  <!--
-  <dialog open id="omori-sketchbook">
+
+
+
+  <dialog id="omori-sketchbook">
     <div class="modal-content">
       <div class="slider-container">
         <button class="slider-btn" id="prev-btn" aria-label="Imagem anterior">&#8592;</button>
@@ -19,7 +21,6 @@
       </div>
     </div>
   </dialog>
-  !-->
 
 
   <main class="whitespace" id="whitespace">
@@ -39,7 +40,6 @@
         <img src="/media/image/elements/single/mewo.gif" id="mewo" alt="Mewo" style="cursor: pointer;" draggable="false" onclick="playMewo()" />
         <audio id="mewoMeow">
           <source src="/media/audio/SFX/mewo.mp3" type="audio/mpeg">
-          Mewo não miou (Erro na reprodução do áudio)
         </audio>
 
       </div>
