--- a/pages/html/homePage.html
+++ b/pages/html/homePage.html
@@ -28,9 +28,25 @@
 
   <main id="main-content">
     <section class="content fade-in-element" aria-labelledby="main-title">
-      <h2 id="main-title">DO QUE SE TRATA OMORI</h2>
+      <h2 id="main-title">O que é OMORI?</h2>
       <p>
         OMORI é um jogo RPG de terror psicológico desenvolvido por OMOCAT. Lançado inicialmente como um projeto de crowdfunding, o jogo combina elementos de exploração, combate por turnos e narrativa envolvente. Os jogadores assumem o papel de OMORI, um personagem que vive em um mundo onírico e surreal, enquanto exploram temas de amizade, perda e auto-descoberta.
+      </p>
+      <br>
+      <p>
+        Você joga como OMORI, inicialmente, um garoto que vive no mund dos sonhos, chamado HEADSPACE.
+        Ao longo do jogo, você encontrará seus amigos, como AUBREY, KEL e HERO, e enfrentará desafios emocionais e psicológicos. 
+      </p>
+      <br>
+
+      <p>
+        Posteriormente, passa a jogar como SUNNY, um garoto no mundo real.
+        SUNNY se trancou no seu quarto por quatro anos após a morte de sua irmã, MARI.
+        Na primeira vez que você ACORDA, você é convidado por KEL a sair de casa.
+      </p>
+      <br>
+      <p>
+        
       </p>
     </section>
 
@@ -43,7 +59,7 @@
             class="gallery-image"
             src="/media/image/elements/single/Album_piquinique.webp" 
             alt="headspace-album" 
-            data-description="Esta é a descrição do HEADSPACE. Um mundo colorido e vibrante que esconde segredos profundos. Explore os vários locais e descubra as memórias esquecidas."
+            data-description="Depois de comer, OMORI e seus amigos caem no sono, com exceção do HERO e MARI."
             data-link="headspace.html"
             draggable="false"
           />
@@ -55,7 +71,7 @@
             class="gallery-image"
             src="/media/image/elements/single/Album_real.webp" 
             alt="real-album" 
-            data-description="Esta é a descrição do MUNDO REAL. A realidade pode ser mais assustadora que os sonhos. Acompanhe SUNNY em sua jornada para reconectar-se com seus amigos e enfrentar a verdade."
+            data-description="SUNNY e seus amigos num piquinique arranjando por sua irmã, MARI."
             data-link="faraway.html"
             draggable="false"
           />
@@ -65,15 +81,18 @@
     </section>
   </main>
   <footer id="blackspace-content">
-    <div id="content">
-      <h1 id="bs-title">Tem certeza que deseja continuar?</h1>
-    </div>
+    <section class="fade-in-element"  id="content">
+      <h1 class="bs-title">Sunny,</h1>
+    </section>
+    <section class="fade-in-element" id="content">
+      <h1 class="bs-title">Não importa o que aconteça</h1>
+    </section>
     <figure>
       <img 
         class="gallery-image"
         src="/media/image/elements/single/blackspace_hole.png"
         alt="Buraco para o Blackspace"
-        data-description="Esta é a descrição do BLACKSPACE. OMORI escondeu seus piores pensamentos no mais profundo buraco de sua mente. Deseja mesmo passar por estas recordações?"
+        data-description="Você NÃO pode se esconder de si mesmo."
         data-link="blackspace.html"
         draggable="false"
       />
