removed fixed background

--- a/pages/html/homePage.html
+++ b/pages/html/homePage.html
@@ -22,7 +22,7 @@
     <ul>
       <li><a href="#main-title">O que é OMORI?</a></li>
       <li><a href="#galeria">Galeria</a></li>
-      <li><a href="#bs-title">???</a></li>
+      <li><a href="#content-1">???</a></li>
     </ul>
   </nav>
 
@@ -81,10 +81,10 @@
     </section>
   </main>
   <footer id="blackspace-content">
-    <section class="fade-in-element"  id="content">
+    <section class="fade-in-element"  id="content-1">
       <h1 class="bs-title">Sunny,</h1>
     </section>
-    <section class="fade-in-element" id="content">
+    <section class="fade-in-element" id="content-2">
       <h1 class="bs-title">Não importa o que aconteça</h1>
     </section>
     <figure>
