--- a/pages/html/headspace.html
+++ b/pages/html/headspace.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HEADSPACE</title>
-    <link rel="icon" href="/media/image/omori_sprite_icon.png" type="image/x-icon">
+    <link rel="icon" href="/media/image/page-icons/index.png" type="image/x-icon">
     <link rel="stylesheet" href="/pages/styles/headspace.css">
-    <script defer src="/pages/scripts/homePage.js"></script>
+    <script defer src="/pages/scripts/headsPace.js"></script>
 </head>
 <body>
+    
     <header id="header">
         <div id="background-layer"></div>
         <div id="content">
@@ -16,14 +17,51 @@
         </div>
     </header>
 
-    <nav>
-        <a id="goBack" href="/pages/html/homePage.html">Voltar à página principal</a>
-    </nav>
+    <a id="goBack" href="/pages/html/homePage.html">Voltar à página principal</a>
 
-    <main>
-        <section class="intro">
+
+
+    <main id="main-content">
+        <section class="fade-in-element">
             <h2 class="omori-font-text">WELCOME TO HEADSPACE</h2>
         </section>
+        <section class="images fade-in-element">
+            <div class="images-content">
+                <figure>
+                <img 
+                    class="gallery-image"
+                    src="/media/image/Album_headspace/album-1.webp" 
+                    alt="headspace-album" 
+                    data-description="'MARI está ensinando todo mundo a fazer coroas de flores! OMORI e KEL estão segurando o exemplo que ela fez. Tão bonito...'"
+                    draggable="false"
+                />
+                <figcaption>HEADSPACE</figcaption>
+                </figure>
+
+                <figure>
+                <img 
+                    class="gallery-image"
+                    src="/media/image/elements/single/Album_real.webp" 
+                    alt="real-album" 
+                    data-description="SUNNY e seus amigos num piquinique arranjando por sua irmã, MARI."
+                    draggable="false"
+                />
+                <figcaption>MUNDO REAL</figcaption>
+                </figure>
+            </div>
+        </section>
     </main>
+
+    <dialog id="imageModal" class="modal-overlay">
+        <div class="modal-content gallery-modal">
+            <button id="closeModal" class="modal-close">&times;</button>
+            <button id="prevBtn" class="nav-arrow">&#8592;</button>
+            <img id="modalImage" src="" alt="Imagem ampliada" draggable="false" />
+            <button id="nextBtn" class="nav-arrow">&#8594;</button>
+            <p id="modalDescription"></p>
+            <button id="modalLink" class="modal-button omori-font-text" draggable="false">OK</button>
+        </div>
+    </dialog>
+
 </body>
 </html>
